# semantic-anlaysis-project

./: .gitignore  README.md  app.py  main.py  model.pkl  pyproject.toml  requirements.txt  semantic_analysis.ipynb  vectorizer.pkl
